02-user-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: userservice
spec:
  selector:
    app: userservice
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
