02-user-service/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: userservice
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: userservice
                port:
                  number: 8080
